@@ -15,6 +15,9 @@
     * Variable WTAR_REGEX split in to twp: FOLDER_WTAR_REGEX, FILE_WTAR_REGEX to allow separation between files and folders when choosing what to wtar.
     * repo rev file has new variable INDEX_URL_RELATIVE_PATH, for the convenience of the secure URL creating code.
     * improved the help for unwtar command
+    * New command read-yaml, just reads a yaml file, can be used to check file's syntax and structure. (admin)
+    * gui mode: added Hover messages to few widgets.
+    * gui mode: added check buttons that invoke read-yaml command on files who's path is in the gui.
 
     programmer visible changes:
     * Separated instlClient to different files by command: insltClientCopy, instlClientRemove, instlClientSync, instlClientUninstall.
